tried to change url to fix cert errors

--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@ title:               Josh Soucie
 tagline:             Engineer, Hacker, Entrepreneur, Globetrotter
 description:
 baseurl:            "/"
-url:                "https://www.joshsoucie.com"
+url:                "https://www.js-bone21.github.io"
 github:
-  url:               "js-bone21.github.io"
+  url:               "https://www.js-bone21.github.io"
 author:
   name:              "Joshua Soucie"
   email:             "jlsoucie21@gmail.com"
