changed url to http from https

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title:               Josh Soucie
 tagline:             Engineer, Hacker, Entrepreneur, Globetrotter
 description:
 baseurl:            "/"
-url:                "https://www.js-bone21.github.io"
+url:                "http://www.joshsoucie.com"
 github:
   url:               "https://www.js-bone21.github.io"
 author:
